--- a/src/app/core/transaction/transaction-category-summary/transaction-category-summary.component.html
+++ b/src/app/core/transaction/transaction-category-summary/transaction-category-summary.component.html
@@ -1,100 +1,25 @@
 <p-fieldset legend="Category summary" [toggleable]="true">
     <div class="flex justify-content-between align-items-center gap-3">
         <div class="flex-1 rounded-2xl border border-surface-200">
-            <div class="p-1" *ngIf="expenseRows.length; else noData">
-                <p-table
-                        [value]="expenseRows"
-                        stripedRows
-                        [tableStyle]="{'width': '100%; max-height: 50%'}"
-                        class="font-medium full-width"
-                        styleClass="w-full">>
-                    <ng-template pTemplate="header" class="font-medium full-width">
-                        <tr class="font-medium full-width">
-                            <th>Expanse Category ({{ expenseRows.length}})</th>
-                            <th>Transactions</th>
-                            <th class="tcs-header">Sum</th>
-                            <th>Menu</th>
-                        </tr>
-                    </ng-template>
+            <transaction-category-summary-table
+            [categories]="categories"
+            [rows]="expenseRows"
+            [total]="totalExpense"
+            [banks]="banks"
+            [matchTypes]="matchTypes"
+            [fieldTypes]="fieldTypes">
 
-                    <ng-template pTemplate="body" let-row>
-                        <tr class="text-sm font-medium leading-tight dark:text-surface-0 text-muted-color">
-                            <td>
-                                <p-tag
-                                        pStyleClass="font-medium"
-                                        data-p="success"
-                                        class="font-medium p-component p-tag p-tag-success"
-                                        [style.backgroundColor]="resolveColor(row.categoryName)"
-                                        [style.borderColor]="resolveColor(row.categoryName)"
-                                        [style.color]="resolveFontColor(resolveColor(row.categoryName))"
-                                        data-pc-section="root"
-                                        data-pc-name="t">
-                        <span class="p-tag-label" data-pc-section="label"
-                        >{{ row.categoryName }}</span></p-tag>
-                            </td>
-                            <td style="width: 7rem" class="tcs-cell-number">{{ row.transactionCount }}</td>
-                            <td class="tcs-cell-number">
-                                {{ row.totalAmount | currency: ' ':'code':'2.2-2'}}
-                            </td>
-                            <td style="width: 5rem; text-align: center;">
-                                <p-button pButton pRipple class="p-button-text p-button-plain p-0 " icon="pi pi-pencil" size="small" variant="text" (click)="onCategoryEditClick(row.category)"></p-button>
-                            </td>
-                        </tr>
-                    </ng-template>
-                </p-table>
-
-                <div class="tcs-summary-footer p-2">
-                    <div>Expense total: {{ totalExpense | currency: ' ':'code':'2.2-2'}}</div>
-                </div>
-            </div>
+            </transaction-category-summary-table>
         </div>
         <div class="flex-1 rounded-2xl border border-surface-200">
-            <div class="p-1" *ngIf="incomeRows.length; else noData">
-                <p-table
-                        [value]="incomeRows"
-                        stripedRows
-                        [tableStyle]="{'width': '100%; max-height: 50%'}"
-                        class="font-medium full-width"
-                        styleClass="w-full">>
-                    <ng-template pTemplate="header" class="font-medium full-width">
-                        <tr class="font-medium full-width">
-                            <th>Income Category ({{ incomeRows.length}})</th>
-                            <th>Transactions</th>
-                            <th class="tcs-header">Sum</th>
-                            <th>Menu</th>
-                        </tr>
-                    </ng-template>
-
-                    <ng-template pTemplate="body" let-row>
-                        <tr class="text-sm font-medium leading-tight dark:text-surface-0 text-muted-color">
-                            <td>
-                                <p-tag
-                                        pStyleClass="font-medium"
-                                        data-p="success"
-                                        class="font-medium p-component p-tag p-tag-success"
-                                        [style.backgroundColor]="resolveColor(row.categoryName)"
-                                        [style.borderColor]="resolveColor(row.categoryName)"
-                                        [style.color]="resolveFontColor(resolveColor(row.categoryName))"
-                                        data-pc-section="root"
-                                        data-pc-name="t">
-                        <span class="p-tag-label" data-pc-section="label"
-                        >{{ row.categoryName }}</span></p-tag>
-                            </td>
-                            <td style="width: 7rem" class="tcs-cell-number">{{ row.transactionCount }}</td>
-                            <td class="tcs-cell-number">
-                                {{ row.totalAmount | currency: ' ':'code':'2.2-2'}}
-                            </td>
-                            <td style="width: 5rem; text-align: center;">
-                                <p-button pButton pRipple class="p-button-text p-button-plain p-0" icon="pi pi-pencil" size="small" variant="text" (click)="onCategoryEditClick(row.category)"></p-button>
-                            </td>
-                        </tr>
-                    </ng-template>
-                </p-table>
-
-                <div class="tcs-summary-footer p-2">
-                    <div>Income total: {{ totalIncome |currency: ' ':'code':'2.2-2'}}</div>
-                </div>
-            </div>
+            <transaction-category-summary-table
+                    [categories]="categories"
+                    [rows]="incomeRows"
+                    [total]="totalIncome"
+                    [banks]="banks"
+                    [matchTypes]="matchTypes"
+                    [fieldTypes]="fieldTypes">
+            </transaction-category-summary-table>
         </div>
     </div>
     <div class="light:bg-surface-950 flex gap-3 py-1">
@@ -108,21 +33,12 @@
             ></p-button>
         </div>
     </div>
-
     <ng-template #noData>
         <div class="tcs-empty">
             No transactions to summarize.
         </div>
     </ng-template>
 </p-fieldset>
-<edit-category
-        [visible]="showEditCategoryDialog"
-        [category]="categoryToEdit!"
-        [banks]="banks"
-        [matchTypes]="matchTypes"
-        [fieldTypes]="fieldTypes"
-        (notify)="onNotify($event)"
-></edit-category>
 <div>
     <add-category
             [visible]="showAddCategoryDialog"
